Incorporation of MySQL; Restructured Frontend; Implementation of Registration and Login

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-CELERY_BROKER_URL=amqp://lyrical:lyrical@localhost/lyrical
-CELERY_BACKEND_URL=db+sqlite:///test.db
+CELERY_BROKER_URL="amqp://lyrical:lyrical@localhost/lyrical"
+CELERY_BACKEND_URL="db+sqlite:///test.db"
+DB_PASSWORD="1116"
